experiments: Create new operator that uses workflows part 6